
2008-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for x86_64 - 8.2.7
