@@ -1,21 +1,24 @@
-# Maintainer: Geoffroy Carrier <geoffroy@archlinux.org>
+# $Id$
+# Maintainer: Chris Brannon <cmbrannon79@gmail.com>
+# Contributor: Geoffroy Carrier <geoffroy@archlinux.org>
 # Contributor: Dan McGee <dan@archlinux.org>
 # Contributor: Jaroslaw Rosiek <philosoph@interia.pl>
 # Contributor: Darwin Bautista <djclue917@gmail.com>
 
 pkgname=asciidoc
 pkgver=8.5.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Text document format for short documents, articles, books and UNIX man pages"
-arch=('i686' 'x86_64')
+arch=('any')
 url="http://www.methods.co.nz/asciidoc/"
 license=('GPL')
 depends=('python' 'libxslt' 'docbook-xsl')
-optdepends=('lilypond & imagemagick: music-filter'
-            'source-highlight: source-highlight-filter'
-	    'dblatex or fop: pdf generation'
-	    'docbook2odf: odf generation'
-	    'lynx or w3m: text generation')
+optdepends=('lilypond: music-filter'
+	    'imagemagick: music-filter (used in conjunction with lilypond)'
+	    'source-highlight: source-highlight-filter'
+	    'fop: pdf generation'
+	    'lynx: text generation'
+	    'w3m: text generation (alternative to lynx)')
 source=(http://downloads.sourceforge.net/asciidoc/asciidoc-${pkgver}.tar.gz)
 
 build() {
